--- a/ds4biz_textractor/extensions/components.json
+++ b/ds4biz_textractor/extensions/components.json
@@ -1,29 +1,370 @@
 [
  {
   "name": "Textract",
-  "description": "",
+  "description": "### Description\nThe TEXTRACT component allows you to use OCR technologies to extract textual content - from machine-readable documents - images or mixed content. One of TEXTRACT's embedded technologies is Tesseract 4, which offers the possibility to improve the process of recognition of characters and words through the use of an LSTM neural network (as default). If you want, you can also create your own settings and modify both the OCR engine and the pre-processing that must be applied to the input files.\n\n### Input\n\n\nTEXTRACT has three different input:\n- OCR Extraction\n- Settings\n- Delete Settings\n\n**OCR Extraction:** generally, a FileReader component must be linked to this input, and the service will directly extract the text from the input file. You can decide if you want a plain text (\"plain/text\") or in a json format(\u201capplication/json\u201d) which will treat separately each page, by selecting in the **\u201cAccept\u201d** field the formats which suits you the most: this parameter changes your output type. Accepted file extension: jpeg, docx, pdf, txt, jpg, png, eml.\n\n\n**Settings:** a trigger must be linked to this input, and using the designed parameters it's possible to create an analyzer or a pre-processing setting. The analyzer will change the OCR parameter,  whilst the pre-processing will change the way in which the file will be \"seen\" by the OCR engine. Once a setting is created, in order to be used in an extraction you need to specify it in the OCR Extraction parameters.\n\n\n**Delete Settings:** if you want to delete an already created settings you can link a trigger to this input and specify which settings you want to delete. Warning: this action is permanent.\n\n\n\n### Output\nThe output of the extraction service is a json composed of the key\u201c text \u201dand the text extracted from the submitted document as a value.\n\n**OCR Extraction:** the output of this service depends on the type of \u201caccept\u201d chosen: \n\n\n\n- In case *\u201cplain/text\u201d* is chosen, the output will be a json composed of the key \u201cpath\u201d, which as value will have the path of the examined file, and the key \"text\"  which will contain the text extracted from the submitted document. You can see an example below:\n\n\n```json\n{\"path\": \"path/to_the/file.extension\"\n\"text\": \"Lorem ipsum Lorem ipsum\"}\n```\n\n- If instead you selected *\u201capplication/json\u201d* as accepted value, your output will have the key \u201cpath\u201d, with the path of the examined file as value, and the key \u201ccontent\u201d which will have as value a list of two keys (\u201cpage\u201d and \u201ctext\u201d) for each page present in the document examined. The \u201cpage\u201d key will have as value an integer number, representing the position (the numeration starts from 0),  and the \u201ctext\u201d key the extracted text for the relative page. Here an example:\n\n```json\n{ \"path\": \"path/to_the/file.extension\"\n\"content\": [{\"page\": 0, \n            \"text\": \"Lorem ipsum Lorem ipsum\"},\n            {\"page\": 1, \n             \"text\": \"Lorem ipsum Lorem ipsum\"},\n            {\"page\": 2, \n             \"text\": \"Lorem ipsum Lorem ipsum\"}]\n}\n```\n\n\n**Settings:** this output will only be a message which declares the setting creation.\n\n\n\n**Delete Settings:** this output will only be a message which declares the setting creation. \n\n\n",
   "group": "Custom",
-  "icon": "RiCheckboxBlankCircleFill",
+  "icon": "RiBubbleChartLine",
   "click": null,
   "events": null,
   "configured": true,
   "inputs": [
    {
-    "id": "file",
-    "label": "file",
+    "id": "ocr_extraction",
+    "label": "ocr_extraction",
     "service": "loko_extract",
-    "to": "output"
+    "to": "ocr_extraction"
+   },
+   {
+    "id": "settings",
+    "label": "settings",
+    "service": "loko_settings",
+    "to": "settings"
+   },
+   {
+    "id": "delete_settings",
+    "label": "delete_settings",
+    "service": "loko_delete_settings",
+    "to": "delete_settings"
    }
   ],
   "outputs": [
    {
-    "id": "output",
-    "label": "output"
+    "id": "ocr_extraction",
+    "label": "ocr_extraction"
+   },
+   {
+    "id": "settings",
+    "label": "settings"
+   },
+   {
+    "id": "delete_settings",
+    "label": "delete_settings"
    }
   ],
   "options": {
-   "values": {},
-   "args": []
+   "values": {
+    "accept": "plain/text",
+    "oem_type": "1: neural nets LSTM engine only",
+    "psm_type": "1: automatic page segmentation with OSD",
+    "lang": "auto",
+    "dpi": 100,
+    "zoom_level": 1.3,
+    "interpolation_mode": "1: INTER_LINEAR"
+   },
+   "args": [
+    {
+     "name": "force_ocr",
+     "type": "boolean",
+     "label": "Force OCR",
+     "helper": "",
+     "group": "OCR Extraction",
+     "value": false,
+     "description": "If True, even if the document is machine readable the OCR engine will be used",
+     "validation": null
+    },
+    {
+     "name": "analyzer",
+     "type": "asyncSelect",
+     "label": "Analyzer",
+     "helper": "File name of the chosen analyzer, if not set the default analyzer settings will be used",
+     "group": "OCR Extraction",
+     "value": null,
+     "description": "",
+     "validation": null,
+     "url": "http://localhost:9999/routes/loko-textractor/ds4biz/textract/0.1/analyzer"
+    },
+    {
+     "name": "accept",
+     "type": "select",
+     "label": "Accept",
+     "helper": "If plain is selected the entire ocr-doc will be returned, otherwise the response will be a json which separates each page. Default='application/json'",
+     "group": "OCR Extraction",
+     "value": "plain/text",
+     "description": "",
+     "validation": null,
+     "options": [
+      "application/json",
+      "plain/text"
+     ]
+    },
+    {
+     "name": "settings_type",
+     "type": "select",
+     "label": "Settings Type",
+     "helper": "",
+     "group": "Custom Settings",
+     "value": null,
+     "description": "",
+     "validation": null,
+     "options": [
+      "Analyzer",
+      "Pre-Processing"
+     ]
+    },
+    {
+     "name": "new_analyzer_name",
+     "type": "dynamic",
+     "label": "Name",
+     "helper": "Name of the analyzer custom settings",
+     "group": "Custom Settings",
+     "value": null,
+     "description": "",
+     "validation": null,
+     "parent": "settings_type",
+     "condition": "{parent}===\"Analyzer\"",
+     "dynamicType": "text",
+     "options": null,
+     "fields": null,
+     "url": null
+    },
+    {
+     "name": "oem_type",
+     "type": "dynamic",
+     "label": "OEM",
+     "helper": "OCR Engine Mode to use ",
+     "group": "Custom Settings",
+     "value": "1: neural nets LSTM engine only",
+     "description": "",
+     "validation": null,
+     "parent": "settings_type",
+     "condition": "{parent}===\"Analyzer\"",
+     "dynamicType": "select",
+     "options": [
+      "0: legacy engine only",
+      "1: neural nets LSTM engine only",
+      "2: legacy + LSTM engines",
+      "3: default, based on what is available"
+     ],
+     "fields": null,
+     "url": null
+    },
+    {
+     "name": "psm_type",
+     "type": "dynamic",
+     "label": "PSM",
+     "helper": "Page Segmentation Mode to use",
+     "group": "Custom Settings",
+     "value": "1: automatic page segmentation with OSD",
+     "description": "",
+     "validation": null,
+     "parent": "settings_type",
+     "condition": "{parent}===\"Analyzer\"",
+     "dynamicType": "select",
+     "options": [
+      "0: orientation and script detection (OSD) only",
+      "1: automatic page segmentation with OSD",
+      "2: automatic page segmentation, but no OSD, or OCR",
+      "3: fully automatic page segmentation, but no OSD",
+      "4: assume a single column of text of variable sizes",
+      "5: assume a single uniform block of vertically aligned text",
+      "6: assume a single uniform block of text",
+      "7: treat the image as a single text line",
+      "8: treat the image as a single word",
+      "9: treat the image as a single word in a circle",
+      "10: treat the image as a single character",
+      "11: sparse text. Find as much text as possible in no particular order",
+      "12: sparse text with OSD",
+      "13: raw line. Treat the image as a single text line, bypassing hacks that are Tesseract-specific"
+     ],
+     "fields": null,
+     "url": null
+    },
+    {
+     "name": "lang",
+     "type": "dynamic",
+     "label": "Language",
+     "helper": "If auto the language will be detected, otherwise you can select italian or english.",
+     "group": "Custom Settings",
+     "value": "auto",
+     "description": "",
+     "validation": null,
+     "parent": "settings_type",
+     "condition": "{parent}===\"Analyzer\"",
+     "dynamicType": "select",
+     "options": [
+      "auto",
+      "ita",
+      "eng"
+     ],
+     "fields": null,
+     "url": null
+    },
+    {
+     "name": "whitelist",
+     "type": "dynamic",
+     "label": "Character Whitelist ",
+     "helper": "The only characters that the OCR engine is allowed to recognize",
+     "group": "Custom Settings",
+     "value": null,
+     "description": "",
+     "validation": null,
+     "parent": "settings_type",
+     "condition": "{parent}===\"Analyzer\"",
+     "dynamicType": "text",
+     "options": null,
+     "fields": null,
+     "url": null
+    },
+    {
+     "name": "blacklist",
+     "type": "dynamic",
+     "label": "Character Blacklist ",
+     "helper": "Characters that must never be included in the results",
+     "group": "Custom Settings",
+     "value": null,
+     "description": "",
+     "validation": null,
+     "parent": "settings_type",
+     "condition": "{parent}===\"Analyzer\"",
+     "dynamicType": "text",
+     "options": null,
+     "fields": null,
+     "url": null
+    },
+    {
+     "name": "vocab_file",
+     "type": "dynamic",
+     "label": "Vocabulary File Name",
+     "helper": "",
+     "group": "Custom Settings",
+     "value": null,
+     "description": "",
+     "validation": null,
+     "parent": "settings_type",
+     "condition": "{parent}===\"Analyzer\"",
+     "dynamicType": "files",
+     "options": null,
+     "fields": null,
+     "url": null
+    },
+    {
+     "name": "patterns_file",
+     "type": "dynamic",
+     "label": "Patterns File Name",
+     "helper": "",
+     "group": "Custom Settings",
+     "value": null,
+     "description": "",
+     "validation": null,
+     "parent": "settings_type",
+     "condition": "{parent}===\"Analyzer\"",
+     "dynamicType": "files",
+     "options": null,
+     "fields": null,
+     "url": null
+    },
+    {
+     "name": "new_preprocessing_name",
+     "type": "dynamic",
+     "label": "Name",
+     "helper": "Name of the pre-processing custom settings",
+     "group": "Custom Settings",
+     "value": null,
+     "description": "",
+     "validation": null,
+     "parent": "settings_type",
+     "condition": "{parent}===\"Pre-Processing\"",
+     "dynamicType": "text",
+     "options": null,
+     "fields": null,
+     "url": null
+    },
+    {
+     "name": "dpi",
+     "type": "dynamic",
+     "label": "DPI",
+     "helper": "DPI value to use when processing files",
+     "group": "Custom Settings",
+     "value": 100,
+     "description": "",
+     "validation": null,
+     "parent": "settings_type",
+     "condition": "{parent}===\"Pre-Processing\"",
+     "dynamicType": "number",
+     "options": null,
+     "fields": null,
+     "url": null
+    },
+    {
+     "name": "zoom",
+     "type": "dynamic",
+     "label": "Apply Zoom",
+     "helper": "",
+     "group": "Custom Settings",
+     "value": null,
+     "description": "",
+     "validation": null,
+     "parent": "settings_type",
+     "condition": "{parent}===\"Pre-Processing\"",
+     "dynamicType": "boolean",
+     "options": null,
+     "fields": null,
+     "url": null
+    },
+    {
+     "name": "zoom_level",
+     "type": "dynamic",
+     "label": "Zoom Level",
+     "helper": "If the zoom rate level is set to a lower value than 1.0 the image will be shrinked, otherwise the image will be enlarged",
+     "group": "Custom Settings",
+     "value": 1.3,
+     "description": "",
+     "validation": null,
+     "parent": "zoom",
+     "condition": "{parent}===true",
+     "dynamicType": "number",
+     "options": null,
+     "fields": null,
+     "url": null
+    },
+    {
+     "name": "interpolation_mode",
+     "type": "dynamic",
+     "label": "Interpolation Mode",
+     "helper": "In case of Zoom-In the image will generally look best with INTER_CUBIC mode (slow) or INTER_LINEAR (faster but still looks good); In case of Zoom-Out the mode INTER_AREA generally works better",
+     "group": "Custom Settings",
+     "value": "1: INTER_LINEAR",
+     "description": "Interpolation algorithm to use when doing the resize",
+     "validation": null,
+     "parent": "zoom",
+     "condition": "{parent}===true",
+     "dynamicType": "select",
+     "options": [
+      "0: INTER_NEAREST",
+      "1: INTER_LINEAR",
+      "2: INTER_CUBIC",
+      "3: INTER_AREA",
+      "4: INTER_LANCZOS4",
+      "7: INTER_MAX",
+      "8: WARP_FILL_OUTLIERS",
+      "16: WARP_INVERSE_MAP"
+     ],
+     "fields": null,
+     "url": null
+    },
+    {
+     "name": "analyzer_name_delete",
+     "type": "asyncSelect",
+     "label": "Analyzer Settings Name",
+     "helper": "Name of the custom settings you want to delete",
+     "group": "Delete Settings",
+     "value": null,
+     "description": "",
+     "validation": null,
+     "url": "http://localhost:9999/routes/loko-textractor/ds4biz/textract/0.1/analyzer"
+    },
+    {
+     "name": "preproc_name_delete",
+     "type": "asyncSelect",
+     "label": "Pre-Processing Settings Name",
+     "helper": "Name of the custom settings you want to delete",
+     "group": "Delete Settings",
+     "value": null,
+     "description": "",
+     "validation": null,
+     "url": "http://localhost:9999/routes/loko-textractor/ds4biz/textract/0.1/preprocessing"
+    }
+   ]
   }
  }
 ]
