--- a/ds4biz_textractor/extensions/components.json
+++ b/ds4biz_textractor/extensions/components.json
@@ -66,21 +66,32 @@
      "name": "analyzer",
      "type": "asyncSelect",
      "label": "Analyzer",
-     "helper": "File name of the chosen analyzer, if not set the default analyzer settings will be used",
+     "helper": "Select an analyzer, if not set the default analyzer settings will be used",
      "group": "OCR Extraction",
      "value": null,
-     "description": "",
+     "description": "An analyzer object is compose of different configurations to run the tesseract engine",
      "validation": null,
      "url": "http://localhost:9999/routes/loko-textractor/ds4biz/textract/0.1/analyzer"
+    },
+    {
+     "name": "preprocessing",
+     "type": "asyncSelect",
+     "label": "Preprocessing",
+     "helper": "Select a preprocessing, if not set no pre-processing will be done",
+     "group": "OCR Extraction",
+     "value": null,
+     "description": "A preprocessing object is compose of different configurations to prepare the input image",
+     "validation": null,
+     "url": "http://localhost:9999/routes/loko-textractor/ds4biz/textract/0.1/preprocessing"
     },
     {
      "name": "accept",
      "type": "select",
      "label": "Accept",
-     "helper": "If plain is selected the entire ocr-doc will be returned, otherwise the response will be a json which separates each page. Default='application/json'",
+     "helper": "Select an output format, default='application/json'",
      "group": "OCR Extraction",
      "value": "plain/text",
-     "description": "",
+     "description": "format and content type of the output",
      "validation": null,
      "options": [
       "application/json",
@@ -91,10 +102,10 @@
      "name": "settings_type",
      "type": "select",
      "label": "Settings Type",
-     "helper": "",
+     "helper": "Select configuration type",
      "group": "Custom Settings",
      "value": null,
-     "description": "",
+     "description": "You can choose between Analyzer or Preprocessing object in order to create a new custom configuration",
      "validation": null,
      "options": [
       "Analyzer",
@@ -105,7 +116,7 @@
      "name": "new_analyzer_name",
      "type": "dynamic",
      "label": "Name",
-     "helper": "Name of the analyzer custom settings",
+     "helper": "Name of the new analyzer",
      "group": "Custom Settings",
      "value": null,
      "description": "",
@@ -193,10 +204,10 @@
      "name": "whitelist",
      "type": "dynamic",
      "label": "Character Whitelist ",
-     "helper": "The only characters that the OCR engine is allowed to recognize",
+     "helper": "Inser characters",
      "group": "Custom Settings",
      "value": null,
-     "description": "",
+     "description": "The only characters that the OCR engine is allowed to recognize. All the characters must be write without separator",
      "validation": null,
      "parent": "settings_type",
      "condition": "{parent}===\"Analyzer\"",
@@ -209,10 +220,10 @@
      "name": "blacklist",
      "type": "dynamic",
      "label": "Character Blacklist ",
-     "helper": "Characters that must never be included in the results",
+     "helper": "Inser characters",
      "group": "Custom Settings",
      "value": null,
-     "description": "",
+     "description": "Characters that must never be included in the results. All the characters must be write without separator",
      "validation": null,
      "parent": "settings_type",
      "condition": "{parent}===\"Analyzer\"",
@@ -225,10 +236,10 @@
      "name": "vocab_file",
      "type": "dynamic",
      "label": "Vocabulary File Name",
-     "helper": "",
+     "helper": "Select the vocabulary file",
      "group": "Custom Settings",
      "value": null,
-     "description": "",
+     "description": "vocabulary file list of tokens that helps the token recognition process",
      "validation": null,
      "parent": "settings_type",
      "condition": "{parent}===\"Analyzer\"",
@@ -241,10 +252,10 @@
      "name": "patterns_file",
      "type": "dynamic",
      "label": "Patterns File Name",
-     "helper": "",
+     "helper": "Select the patterns file",
      "group": "Custom Settings",
      "value": null,
-     "description": "",
+     "description": "Patterns file that helps the token recognition process",
      "validation": null,
      "parent": "settings_type",
      "condition": "{parent}===\"Analyzer\"",
@@ -321,10 +332,10 @@
      "name": "interpolation_mode",
      "type": "dynamic",
      "label": "Interpolation Mode",
-     "helper": "In case of Zoom-In the image will generally look best with INTER_CUBIC mode (slow) or INTER_LINEAR (faster but still looks good); In case of Zoom-Out the mode INTER_AREA generally works better",
+     "helper": "Interpolation algorithm",
      "group": "Custom Settings",
      "value": "1: INTER_LINEAR",
-     "description": "Interpolation algorithm to use when doing the resize",
+     "description": "In case of Zoom-In the image will generally look best with INTER_CUBIC mode (slow) or INTER_LINEAR (faster but still looks good); In case of Zoom-Out the mode INTER_AREA generally works better",
      "validation": null,
      "parent": "zoom",
      "condition": "{parent}===true",
