--- a/ds4biz_textractor/extensions/components.json
+++ b/ds4biz_textractor/extensions/components.json
@@ -48,7 +48,7 @@
     "psm_type": "1: automatic page segmentation with OSD",
     "lang": "auto",
     "dpi": 100,
-    "zoom_level": 1.3,
+    "zoom_level": "1.3",
     "interpolation_mode": "1: INTER_LINEAR"
    },
    "args": [
@@ -318,7 +318,7 @@
      "label": "Zoom Level",
      "helper": "If the zoom rate level is set to a lower value than 1.0 the image will be shrinked, otherwise the image will be enlarged",
      "group": "Custom Settings",
-     "value": 1.3,
+     "value": "1.3",
      "description": "",
      "validation": null,
      "parent": "zoom",
